--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -1,10 +1,18 @@
 \section{\texorpdfstring{\faGroup\ 学术职务  \& 机构}{学术职务  \& 机构}}
+\mycvitemac{自2024}{城市数据派}{\songti{高级城市数据师,讲师}}
+\mycvitemac{自2024}{国际摄影测量与遥感协会学生联盟}{\songti{会员}}
+\mycvitemac{自2024}{香港科技大学 (广州) AI 4D City Lab}{\songti{访问学者}}
 \mycvitemac{自2019}{空间全生命周期健康国际研究中心}{\songti{成员}}
 \mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{贡献者}}
 \mycvitemac{自2015}{微信公众号“一览众山小 可持续城市与交通”}{\songti{志愿者}}
+\mycvitemac{2024}{第二届世界地理大会"全球健康福祉与健康地理学研究"}{\songti{分会场召集人}}
+\mycvitemac{2024}{第四届空间全生命周期健康国际研讨会"系统仿真模型在健康领域的应用"}{\songti{分会场召集人}}
+\mycvitemac{2024}{第四届空间全生命周期健康国际研讨会技能提升工作坊}{\songti{主讲人}}
+\mycvitemac{2024}{和鲸社区、GISphere 'Python x GIS' GeoAI Workshop }{\songti{特邀导师}}
+\mycvitemac{2024}{2024年空间流行病学分析方法与应用培训班}{\songti{课程讲师}}
 \mycvitemac{2020-2023}{GISphere}{\songti{编委,理事会成员,公众号负责人}}
 \mycvitemac{2018-2020}{阿里云栖社区}{\songti{认证专家}}
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
-\mycvitemacl{自2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, Cities, Methods in Ecology and Evolution, International Journal of Digital Earth, Frontiers in Public Health,Frontiers in Environmental Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
+\mycvitemacl{自2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing \& Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience \& Remote Sensing, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
