--- a/cnlatex/awards.tex
+++ b/cnlatex/awards.tex
@@ -1,5 +1,6 @@
 \section{\texorpdfstring{\faTrophy\ 奖励 \& 荣誉}{奖励 \& 荣誉}}
-\mycvitemPP{2022.03}{支援内蒙古自治区土默特左旗卫生健康委员会新冠疫情管控工作表彰}
+\mycvitemPP{2025.01}{教育部海外博士后引才专项}
+\mycvitemPP{2022.03}{内蒙古自治区呼和浩特市土默特左旗旗委、旗政府、旗卫健委新冠防控工作特殊贡献表彰}
 \mycvitemPP{2021.07}{第五届城垣杯规划决策支持模型设计大赛二等奖}
 \mycvitemPP{2019.06}{2019年国家公派留学奖学金（CSC）}
 \mycvitemPP{2019.06}{永清环保奖学金二等奖学金}
