--- a/cnlatex/employment.tex
+++ b/cnlatex/employment.tex
@@ -1,5 +1,8 @@
-\section*{Employment}
-\begin{tabular}{p{0.2\textwidth} p{0.8\textwidth}}
-08/01/2018 -- now & \textbf{Postdoctoral Research Associate} \newline
-		            Michigan State University, East Lansing, MI, USA \\ 
-\end{tabular}
+%\section*{工作经历}
+%\begin{tabular}{p{0.2\textwidth} p{0.8\textwidth}}
+%2025.01 -- 至今 & \textbf{博士后研究员} \newline
+%		            武汉大学资源与环境科学学院 \\ 
+%\end{tabular}
+
+\section{\texorpdfstring{\faBuilding\ 工作经历}{工作经历}}
+\mycvitemCOM{2025.01-}{\songti{重点资助博士后}}{\songtix{地理学流动站,资源与环境科学学院}}{武汉大学}{博士后合作导师: 贾鹏 \ 教授}{}{}{}{}
