--- a/cnlatex/presentation.tex
+++ b/cnlatex/presentation.tex
@@ -1,4 +1,9 @@
 \section{\texorpdfstring{\faCommentsO\ 学术报告}{学术报告}}
+\mycvitemXP{2024.07.28}{\songti{健康领域常用的建成环境审计与仿真工具的发展}}{\songtix{第四届空间全生命周期健康国际研讨会}}{中国,武汉}
+\mycvitemXP{2024.05.26}{\songti{健康领域常用的环境暴露观测工具的发展}}{\songtix{健康地理学青年学者论坛2024}}{中国,珠海}
+\mycvitemXP{2024.05.25}{\songti{Bridging environment and human health: from earth observation to human-center observation(\textbf{受邀})}}{\songtix{香港科技大学(广州)AI 4D City Lab}}{中国,广州}
+\mycvitemXP{2024.05.19}{\songti{基于多源地理空间数据的体力活动机会评估研究}}{\songtix{第九届青年地学论坛}}{中国,厦门}
+\mycvitemXP{2024.05.12}{\songti{健康领域常用的建成环境审计工具}}{\songtix{第一届遥感地理大会}}{中国,南京}
 \mycvitemXP{2024.01.17}{\songti{基于空间全生命周期流行病学框架的健康地理学研究(\textbf{受邀})}}{\songtix{中国科学院城市环境研究所}}{中国,厦门}
 \mycvitemXP{2023.05.19}{\songti{兴趣引导创造的火花，但坚持才能星火燎原(\textbf{受邀})}}{\songtix{厦门第一中学}}{中国,厦门}
 \mycvitemXP{2022.08.18}{Do neighborhood boundaries matter for examining the associations between environmental factors and obesity}{The 29th International Conference on Geoinformatics in 2022 session 10-2 GIScience for Public Health}{中国，北京}
