--- a/cnlatex/researches.tex
+++ b/cnlatex/researches.tex
@@ -1,4 +1,6 @@
 \section{\texorpdfstring{\faUniversity\ 科研项目}{科研项目}}
+\mycvitemac{2025-2028}{“脆弱性人群的居家环境风险因子精准监测与健康风险效应分析”, 教育部海外博士后引才专项}{主持}
+\mycvitemac{2024-2026}{“糖尿病慢性并发症的中西医协同危险因素筛查与早期识别”, 中国中医药科技发展中心2024中西医协同慢病管理研究项目}{参与}
 \mycvitemac{2023-2026}{“老年人及儿童社区居家环境健康风险评价与防范及适宜产品开发”, 国家重点研发计划“主动健康与人口老龄化科技应对”重点专项(2023YFC3604704)}{参与}
 \mycvitemac{2022-2025}{“城市社区空间宜步行性对儿童肥胖的影响机制研究”, 国家自然科学基金面上资助项目(42271433) }{参与}
 \mycvitemac{2020-2021}{“COVID-19大流行下居民日常行为，生活方式与城市建成环境的演变规律研究”, 2020年度“清华-腾讯”新兴技术×未来城市空间项目“WeSpace学术支持计划”}{主持}
