--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -5,222 +5,305 @@
 \newcommand{\CS}{\textsuperscript{*}} % corresponding author
 \newcommand{\CF}{\textsuperscript{\#}} % co-first author
 
-
+\setitemize[1]{itemsep=2pt,partopsep=0pt,parsep=\parskip,topsep=0pt}
+%\begin{spacing}{1.25}
 \section{\texorpdfstring{\faBook\ 出版物}{出版物}}
 \CS 通讯作者, \CF 共同第一作者.
 
-\subsection*{\texorpdfstring{\faBook\ 期刊论文(第一作者或关键作者[导师一作])}{期刊论文(第一作者或关键作者[导师一作])}}
+\subsection*{\texorpdfstring{\faBook\ 第一/共同第一或通讯作者}{第一/共同第一或通讯作者}}
 %\subsection*{Peer-Reviewed Journal Articles}
 \begin{enumerate}
 %\begin{etaremune}
+\item    
+    Yue Ying, \Shaoqing\CS, Mila Koeva, Monika Kuffer, Claudio Persello, Wen Zhou, Jaap Zevenbergen (2025).
+    Toward 3D hedonic price model for vertically developed cities using street view images and machine learning methods. 
+    \textbf{\textit{Habitat International}} \textit{156}: 103288.
+    \DOI{10.1016/j.habitatint.2025.103288}.
+    \textbf{[SSCI, IF=6.5, 1\heiti{区}, JCR Q1]}
+\item    
+    Manyao Li\CF, \Shaoqing\CF, Yuanyuan Shi\CF, Kun Qin\CF, Ross Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, Jing Su, Gordon G. Liu, Shujuan Yang\CS, Peng Jia\CS (2025).
+    Heterogeneous impacts of and vulnerabilities to the COVID-19 pandemic. 
+    \textbf{\textit{Landscape Ecology}} \textit{40}: 32.
+    \DOI{10.1007/s10980-024-02039-z}.
+    \textbf{[SCI, IF=4.0, 2\heiti{区}, JCR Q1，景观生态旗舰期刊]}
 \item
+    \Shaoqing, Yuchen Li, Alfred Stein, Shujuan Yang, Peng Jia\CS (2024).
+    Street view imagery-based built environment auditing tools: a systematic review. 
+    \textbf{\textit{International Journal of Geographical Information Science}} \textit{38}(6): 1136-1157.
+    \DOI{10.1080/13658816.2024.2336034} 
+    \textbf{[SCI/SSCI, IF=4.3, 1\heiti{区}, JCR Q1，GIS旗舰期刊]}
+\item
+     Kun Qin\CF, Zhanpeng Wang\CF, \Shaoqing\CF, Yuchen Li, Manyao Li, Chen Li, Ge Qiu, Yuanyuan Shi, Chun Yin, Shujuan Yang, Peng Jia\CS \ (2024)
+    Spatiotemporal patterns of air pollutants over the epidemic course: a national study in China. 
+    \textbf{\textit{Remote Sensing}} \textit{16}(7): 1298.
+    \DOI{10.3390/rs16071298}. 
+    \textbf{[SCI, IF=4.2, 2\heiti{区}, JCR Q1]}
+\item
+    %\Shaoqing, G. Qiu, Y. Li, S. Yang, S. Yang, P. Jia\CS (2024).
     \Shaoqing, Ge Qiu, Yuchen Li, Shuhan Yang, Shujuan Yang, Peng Jia\CS (2024).
     State of the art of lifecourse cohort establishment. 
-    \textit{China CDC Weekly} \textit{(Accepted)}. [SCI, IF=4.7, Q1].
+    \textit{China CDC Weekly}: 6(14), 300–304.
+    \DOI{10.46234/ccdcw2024.058}. 
+    \textbf{[SCI/SSCI, IF=4.3, 4\heiti{区}, JCR Q1, 中疾控主办期刊]}.
 \item
-    \Shaoqing, Wufan Zhao, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia (2023).
+    \Shaoqing, Wufan Zhao\CS, Yanwen Wang, Xiao Huang, Zhidong Chen, Jinghan Lei, Alfred Stein, Peng Jia (2023).
     Assessing spatiotemporal bikeability using multi-source geospatial big data: a case study of Xiamen, China. 
-    \textit{International Journal of Applied Earth Observation and Geoinformation}: \textit{125}, 103539.
-    \DOI{10.1016/j.jag.2023.103539}. [SCI, IF=7.5, Q1].
-\item
-    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia\CS (2023).
-    Development and validation of an age-sex-ethnicity-specific metabolic syndrome score in the Chinese adults.
-    \textbf{\textit{Nature Communications}} \textit{14}: 6988.
-    \DOI{10.1038/s41467-023-42423-y}. [SCI, IF=16.6, Q1].
-\item
-    Peng Jia\CS, Yuanyuan Shi, Qi Jiang, \Shaoqing, Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang (2023).
-    Environmental determinants of childhood obesity: a meta-analysis.
-    \textbf{\textit{The Lancet Global Health}} \textit{11}: S7.
-    \DOI{10.1016/S2214-109X(23)00092-X}. [SCI, IF=34.3, Q1].
-\item
-    Shudi Zuo, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang (2022).
-    The importance of the functional mixed entropy for the explanation of residential and transport CO$_2$ emissions in the urban center of China.
-    \textit{Journal of Cleaner Production}: \textit{380}, 134947.
-    \DOI{10.1016/j.jclepro.2022.134947}. [SCI, IF=11.1, Q1].
+    \textbf{\textit{International Journal of Applied Earth Observation and Geoinformation}} \textit{125}: 103539.
+    \DOI{10.1016/j.jag.2023.103539}. 
+    \textbf{[SCI, IF=7.6, 1\heiti{区}, JCR Q1]}.
 \item
     \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren\CS (2021).
     Improving plot-level model of forest biomass: a combined approach using machine learning with spatial statistics.
-    \textit{Forests} \textit{12}(12): 1663.
-    \DOI{10.3390/f12121663}. [SCI, IF=2.9, Q2].
-\item
-    Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia\CS (2021).
-    Pitfalls in Modeling Asymptomatic COVID-19 Infection.
-    \textit{Frontiers in Public Health} \textit{9}: 593176.
-    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF=5.2, Q3].
-\item
-    Peng Jia\CS, \Shaoqing, Tong Wu, Shujuan Yang (2021).
-    New approaches to anticipate the risk of reverse zoonosis.
-    \textbf{\textit{Trends in Ecology \& Evolution}} \textit{36}: 580-590.
-    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF=16.8, Q1].
-\item
-    Peng Jia\CS, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou (2020).
-    Natural environment and childhood obesity: a systematic review.
-    \textit{Obesity Reviews} 22: e13097.
-    \DOI{10.1111/obr.13097}. [SCI, IF=8.9, Q1].
+    \textbf{\textit{Forests}} \textit{12}(12): 1663.
+    \DOI{10.3390/f12121663}. 
+    \textbf{[SCI, IF=2.4, 2\heiti{区}, JCR Q1]}.
 \item
     \Shaoqing\CF, Yin Ren\CF, Shudi Zuo\CS, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
-    \textit{Remote Sensing} \textit{12}(23): 3932.
-    \DOI{10.3390/rs12233932}. [SCI, IF=5.0, Q2].
+    \textbf{\textit{Remote Sensing}} \textit{12}(23): 3932.
+    \DOI{10.3390/rs12233932}. 
+    \textbf{[SCI, IF=4.2, 2\heiti{区}, JCR Q1]}.
 \item
     {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙\CS(2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
-    \textit{上海城市规划} \textit{05}: 22-29.
-    \DOI{10.11982/j.supr.20200504}. [北大核心] 
+    \textbf{\heiti{\textit{上海城市规划}}} \textit{05}: 22-29.
+    \DOI{10.11982/j.supr.20200504}. 
+    \textbf{\heiti{[城市规划T3期刊, 北大核心]}} 
 \item
     \Shaoqing, Shudi Zuo, Yin Ren\CS (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
-    \textit{Data in Brief} \textit{29}: 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [ESCI, IF=1.2].
-\item
-    Shudi Zuo, \Shaoqing, Yin Ren (2019).
-    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
-    \textit{Journal of Cleaner Production} \textit{244}: 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF=11.1, Q1].
+    \textbf{\textit{Data in Brief}} \textit{29}: 105274.
+    \DOI{10.1016/j.dib.2020.105274}. 
+    \textbf{[ESCI/EI, IF=1.0]}.
 \item
     {\heiti{戴劭勍}}, 江辉仙\CS, 李佳佳, 苏娴, 吴娟, 任引 (2018).
 	H市城区步行环境对两抢一盗警情的影响.
-    {\songtix{地理科学}}  \textit{38}(8): 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [北大核心, CSCD, CSSCI]
+    \textbf{\heiti{\textit{地理科学}}} \textit{38}(8): 1235-1244.
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. 
+    \textbf{\heiti{[地理学T1期刊, 北大核心, CSCD, CSSCI]}}
 \item
     \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren\CS, Huixian Jiang (2017).
 	Landscape-scale simulation analysis of waterlogging and sponge city planning for a central urban area in Fuzhou city, China.
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
-    \DOI{10.1061/9780784481042.028}. [EI]
+    \DOI{10.1061/9780784481042.028}. 
+    \textbf{[EI]}
+
 %\end{etaremune}
 \end{enumerate}
 
-\subsection*{\texorpdfstring{\faBook\ 期刊论文(共同作者)}{期刊论文(共同作者)}}
+\subsection*{\texorpdfstring{\faBook\ 关键作者(导师一作)}{关键作者(导师一作)}}
+%\subsection*{Peer-Reviewed Journal Articles}
+\begin{enumerate}
+\item
+    Shujuan Yang, Bin Yu, Wanqi Yu, \Shaoqing, Chuanteng Feng, Ying Shao,Xing Zhao, Xiaoqing Li, Tianjing He, Peng Jia\CS (2023).
+    Development and validation of an age-sex-ethnicity-specific metabolic syndrome score in the Chinese adults.
+    \textbf{\textit{Nature Communications}} \textit{14}(1): 6988.
+    \DOI{10.1038/s41467-023-42423-y}. \textbf{[SCI, IF=14.7, \heiti{1区-Nature子刊}, JCR Q1]}.
+\item
+    Peng Jia\CS, Yuanyuan Shi, Qi Jiang, \Shaoqing, Bin Yu, Shuhan Yang, Ge Qiu, Shujuan Yang (2023).
+    Environmental determinants of childhood obesity: a meta-analysis.
+    \textbf{\textit{The Lancet Global Health}} \textit{11}: S7.
+    \DOI{10.1016/S2214-109X(23)00092-X}. 
+    \textbf{[SCI, IF=20.0, \heiti{1区-Lancet子刊}, JCR Q1]}.
+\item
+    Shudi Zuo\CS, \Shaoqing, Jiaheng Ju, Fanxin Meng, Yin Ren, Yunfeng Tian, Kaide Wang (2022).
+    The importance of the functional mixed entropy for the explanation of residential and transport CO$_2$ emissions in the urban center of China.
+    \textbf{\textit{Journal of Cleaner Production}}: \textit{380}, 134947.
+    \DOI{10.1016/j.jclepro.2022.134947}. \textbf{[SCI, IF=9.7, 1\heiti{区}, JCR Q1]}.
+\item
+    Peng Jia\CS, \Shaoqing, Tong Wu, Shujuan Yang (2021).
+    New approaches to anticipate the risk of reverse zoonosis.
+    \textbf{\textit{Trends in Ecology \& Evolution}} \textit{36}(7): 580-590.
+    \DOI{10.1016/j.tree.2021.03.012}. 
+    \textbf{[SCI, IF=16.7, \heiti{1区-Cell旗下生态学顶刊}, JCR Q1]}.
+\item
+    Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen\CS (2021).
+    High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
+    \textbf{\textit{Journal of Cleaner Production}} \textit{297}: 144609.
+    \DOI{10.1016/j.jclepro.2021.126482}. 
+    \textbf{[SCI, IF=9.7, 1\heiti{区}, JCR Q1]}.
+\item
+    Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia\CS (2021).
+    Pitfalls in Modeling Asymptomatic COVID-19 Infection.
+    \textbf{\textit{Frontiers in Public Health}} \textit{9}: 593176.
+    \DOI{10.3389/fpubh.2021.593176}. 
+    \textbf{[SCI, IF=3.0, 3\heiti{区}, JCR Q2]}.
+\item
+    Peng Jia\CS, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou\CS (2020).
+    Natural environment and childhood obesity: a systematic review.
+    \textbf{\textit{Obesity Reviews}} \textit{22}: e13097.
+    \DOI{10.1111/obr.13097}. 
+    \textbf{[SCI, IF=8.0, 2\heiti{区}, JCR Q1]}.
+\item
+    Shudi Zuo, \Shaoqing, Yin Ren\CS (2019).
+    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
+    \textbf{\textit{Journal of Cleaner Production}} \textit{244}: 118659.
+    \DOI{10.1016/j.jclepro.2019.118659}. 
+    \textbf{[SCI, IF=9.7, 1\heiti{区}, JCR Q1]}.
+\item
+    Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren\CS (2018).
+    Determining the mechanisms that influence the surface temperature of urban forest canopies by combining remote sensing methods, ground observations, and spatial statistical models. 
+    \textbf{\textit{Remote Sensing}} \textit{10}(11): 1814.
+    \DOI{10.3390/rs10111814}. 
+    \textbf{[SCI, IF=4.2, 2\heiti{区}, JCR Q1]}.
+\item
+    Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren\CS (2018).
+    Analysis of heavy metal sources in the soil of riverbanks across an urbanization gradient.
+    \textbf{\textit{International Journal of Environmental Research and Public Health}} \textit{15}(10): 2175.
+    \DOI{10.3390/ijerph15102175}. 
+    \textbf{[SCI, IF=4.6, 3\heiti{区}, JCR Q2]}.
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 共同作者}{共同作者}}
 %\subsection*{Peer-Reviewed Journal Articles}
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia (2024).
+    Chun Yin\CS, Zhe Zhang, \Shaoqing, Yiyi Chen\CS (2025).
+    Built environments and obesity: A framework considering residences, commute routes, and workplaces.
+    \textbf{\textit{Cities}} \textit{160}: 105842.
+    \DOI{10.1016/j.cities.2025.105842}. \textbf{[SSCI, IF=6.0, Q1, \heiti{城市领域旗舰期刊}]}.
+\item
+    Changwei Cai\CF, Shuzhen Zhu\CF, Mingfang Qin\CF, Xiaoqing Li\CF, Chuanteng Feng, Bin Yu, \Shaoqing, Ge Qiu, Yuchen Li, Tingting Ye, Wenling Zhong, Ying Shao, Lan Zhang, Peng Jia\CS, Shujuan Yang\CS (2024).
+    Long-term exposure to $PM_{2.5}$ chemical constituents and diabesity: evidence from a multi-center cohort study in China. 
+    \textbf{\textit{The Lancet Regional Health–Western Pacific}} \textit{16}(6): 1028.
+    \DOI{10.1016/j.lanwpc.2024.101100}. \textbf{[SCI, IF=7.6, \heiti{1区-Lancet子刊}, JCR Q1]}.
+\item
+    Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia\CS (2024).
     Long-term dynamic monitoring and driving force analysis of eco-environmental quality in China. 
-    \textit{Remote Sensing} \textit{16}(6): 1028
-    \DOI{10.3390/rs16061028}. [SCI, IF=5.0, Q2].
+    \textbf{\textit{Remote Sensing}} \textit{16}(6): 1028
+    \DOI{10.3390/rs16061028}. 
+    \textbf{[SCI, IF=4.2, 2\heiti{区}, JCR Q1]}.
 \item
-    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun (2024).
+    Chun Yin, Jiahang Liu, \Shaoqing, Bindong Sun\CS (2024).
     Mixed land use has opposite associations with subjective well-being through social capital: spatial heterogeneity in residential and workplace neighborhoods.
-    \textit{Travel Behaviour and Society} \textit{35}: 100724.
-    \DOI{10.1016/j.tbs.2023.100724}. [SSCI, IF=5.2, Q2].
+    \textbf{\textit{Travel Behaviour and Society}} \textit{35}: 100724.
+    \DOI{10.1016/j.tbs.2023.100724}. 
+    \textbf{[SSCI, IF=5.1, 2\heiti{区}, JCR Q1]}.
 \item
-    Yunfeng Tian, Shudi Zuo, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou (2024).
+    Yunfeng Tian, Shudi Zuo\CS, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou (2024).
     Local carbon emission zone construction in the highly urbanized regions: application of residential and transport CO$_2$ emissions in Shanghai, China.
-    \textit{Building and Environment} \textit{247}: 111007.
-    \DOI{10.1016/j.buildenv.2023.111007}. [SCI, IF=7.4, Q1].
+    \textbf{\textit{Building and Environment}} \textit{247}: 111007.
+    \DOI{10.1016/j.buildenv.2023.111007} 
+    \textbf{[SCI, IF=7.1, 1\heiti{区}, JCR Q1]}.
 \item
-    Pengxin Zhang, Shuhan Yang, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia (2022).
+    Pengxin Zhang\CF, Shuhan Yang\CF, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia\CS (2022).
     Global spreading of Omicron variant of COVID-19.
-    \textit{Geospatial Health} \textit{17}.
-    \DOI{10.4081/gh.2022.1083}. [SCI, IF=1.7, Q4].
+    \textbf{\textit{Geospatial Health}} \textit{17}.
+    \DOI{10.4081/gh.2022.1083}. 
+    \textbf{[SCI, IF=1.0, 4\heiti{区}, Q4]}.
 \item
-    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing \enspace (2022).
+    Yupeng Liu\CF, Jiajia Li\CF, Weiqiang Chen\CS, Lulu Song, \Shaoqing \enspace (2022).
     Quantifying urban mass gain and loss by a GIS‐based material stocks and flows analysis.
-    \textit{Journal of Industrial Ecology} \textit{26}(3): 1051-1060.
-    \DOI{10.1111/jiec.13252}. [SCI, IF=5.9, Q2].
+    \textbf{\textit{Journal of Industrial Ecology}} \textit{26}(3): 1051-1060.
+    \DOI{10.1111/jiec.13252}.. 
+    \textbf{[SCI, IF=4.9, 3\heiti{区}, JCR Q1, 产业生态旗舰期刊]}.
 \item
-    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang (2022).
+    Weichao Wang\CF, Xian Liu\CF, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Zhihong Zhang, Sijin Liu, Aiqian Zhang, Qian Liu\CS, Guibin Jiang (2022).
     Identification of two-dimensional copper signatures in human blood for bladder cancer with machine learning.
-    \textit{Chemical Science} \textit{13}(6): 1648-1656.
-    \DOI{10.1039/D1SC06156A}. [SCI, IF=8.4, Q1].
+    \textbf{\textit{Chemical Science}} \textit{13}(6): 1648-1656.
+    \DOI{10.1039/D1SC06156A}.  
+    \textbf{[SCI, IF=7.6, 1\heiti{区}, JCR Q1]}.
 \item
-    Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing \enspace (2021).
+    Panfeng Dou, Shudi Zuo\CS, Yin Ren\CS, Manuel J. Rodriguez, \Shaoqing \enspace (2021).
     Refined water security assessment for sustainable water management: a case study of 15 key cities in the Yangtze River Delta, China.
-    \textit{Journal of Environmental Management} \textit{290}: 112588.
-    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF=8.7, Q1].
+    \textbf{\textit{Journal of Environmental Management}} \textit{290}: 112588.
+    \DOI{10.1016/j.jenvman.2021.112588}. 
+    \textbf{[SCI, IF=8.0, 2\heiti{区}, JCR Q1]}.
 \item
-    Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang (2021).
+    Shudi Zuo, Lianping Yang\CS, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang (2021).
     The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
-    \textit{Science of the Total Environment} \textit{764}: 144609.
-    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF=9.8, Q1].
+    \textbf{\textit{Science of the Total Environment}} \textit{764}: 144609.
+    \DOI{10.1016/j.scitotenv.2020.144609}. 
+    \textbf{[SCI, IF=8.2, 1\heiti{区},JCR Q1]}.
 \item
-    Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen (2021).
-    High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
-    \textit{Journal of Cleaner Production} \textit{297}: 144609.
-    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF=11.1, Q1].
-\item
-    Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang (2021).
+    Peng Jia\CF, Xinxi Cao\CF, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang\CS (2021).
     Green space access in the neighbourhood and childhood obesity.
-    \textit{Obesity Reviews} 22: e13100.
-    \DOI{10.1111/obr.13100}. [SCI, IF=8.9, Q1].
+    \textbf{\textit{Obesity Reviews}} 22: e13100.
+    \DOI{10.1111/obr.13100}.
+    \textbf{[SCI, IF=8.0, 2\heiti{区}, JCR Q1]}.
 \item
-    Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia (2021).
+    Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia\CS (2021).
     Neighbourhood speed limit and childhood obesity.
-    \textit{Obesity Reviews} 22: e13052.
-    \DOI{10.1111/obr.13052}. [SCI, IF=8.9, Q1].
+    \textbf{\textit{Obesity Reviews}} 22: e13052.
+    \DOI{10.1111/obr.13052}. 
+    \textbf{[SCI, IF=8.0, 2\heiti{区}, JCR Q1]}.
 \item
-    Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2021).
+    Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia\CS. (2021).
     Access to bike lanes and childhood obesity: a systematic review and meta‐analysis.
-    \textit{Obesity Reviews} 22: e13042.
-    \DOI{10.1111/obr.13042}. [SCI, IF=8.9, Q1]
+    \textbf{\textit{Obesity Reviews}} 22: e13042.
+    \DOI{10.1111/obr.13042}. 
+    \textbf{[SCI, IF=8.0, 2\heiti{区}, JCR Q1]}.
 \item
-    XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu (2021).
+    XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu\CS (2021).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
-    \textit{Journal of Cleaner Production} \textit{278}: 123418.
-    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF=11.1, Q1].
+    \textbf{\textit{Journal of Cleaner Production}} \textit{278}: 123418.
+    \DOI{10.1016/j.jclepro.2020.123418}.
+    \textbf{[SCI, IF=9.7, 1\heiti{区}, JCR Q1]}.
 \item
-    Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang (2020).
+    Shengyu Xie, Guangwei Yu\CS, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang\CS (2020).
     Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
-    \textit{Journal of Analytical and Applied Pyrolysis} \textit{150}: 104866.
-    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF=6.0, Q2].
+    \textbf{\textit{Journal of Analytical and Applied Pyrolysis}} \textit{150}: 104866.
+    \textbf{[SCI, IF=5.8, 2\heiti{区}, JCR Q1]}.
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁 (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
-    {\songtix{环境科学学报}} \textit{39}(7): 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [北大核心, CSCD] 
+    \textbf{\heiti{\textit{环境科学学报}}} \textit{39}(7): 2398-2409.
+    \DOI{10.13671/j.hjkxxb.2019.0122}.
+    \textbf{\heiti{[北大核心, CSCD]}}
 \item
-    Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng (2019).
+    Qing Yang\CS, Tianyue Huang, Saige Wang\CS, Jiashuo Li\CS, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    \textit{Applied Energy} \textit{247}: 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF=11.2, Q1].
+    \textbf{\textit{Applied Energy}} \textit{247}: 254-269.
+    \DOI{10.1016/j.apenergy.2019.04.005}.
+    \textbf{[SCI, IF=10.1, 1\heiti{区}, JCR Q1]}.
 \item
-    Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing \enspace (2019).
+    Guoliang Yun, Yuanrong He\CS, Yuantong Jiang, Panfeng Dou, \Shaoqing \enspace (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere} \textit{10}(2): 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF=2.9, Q4].
+    \textbf{\textit{Atmosphere}} \textit{10}(2): 55.
+    \DOI{10.3390/atmos10020055}. 
+    \textbf{[SCI, IF=2.5, 4\heiti{区}, JCR Q3]}.
 \item
-    Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2018).
-    Determining the mechanisms that influence the surface temperature of urban forest canopies by combining remote sensing methods, ground observations, and spatial statistical models. 
-    \textit{Remote Sensing} \textit{10}(11): 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF=5.0, Q2].
-\item
-    Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren (2018).
-	Analysis of heavy metal sources in the soil of riverbanks across an urbanization gradient.
-    \textit{International Journal of Environmental Research and Public Health} \textit{15}(10): 2175.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF=4.6, Q3].
-\item
-    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2018).
-	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
-    \textit{Remote Sensing} \textit{10}(4): 521.
-    \DOI{10.3390/rs10040521}. [SCI, IF=5.0, Q2].
+    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren\CS (2018).
+    Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
+    \textbf{\textit{Remote Sensing}} \textit{10}(4): 521.
+    \DOI{10.3390/rs10040521} 
+    \textbf{[SCI, IF=4.2, 2\heiti{区}, JCR Q1]}.
 \item
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙 (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
-    {\songtix{中国人口·资源与环境}} \textit{28}(02): 115-122.
-    \DOI{10.12062/cpre.20170915}. [北大核心, CSCD, CSSCI]
+    \textbf{\heiti{\textit{中国人口·资源与环境}}} 28(02): 115-122.
+    \DOI{10.12062/cpre.20170915}.  
+    \textbf{\heiti{[北大核心, CSCD, CSSCI]}} 
 \item
-    Qin Ye, \Shaoqing, Gang Zeng (2017).
-	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
-    \textit{Chinese Journal of Population Resources and Environment} \textit{16}(1): 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI, IF=9.3].
+    Qin Ye\CS, \Shaoqing, , Gang Zeng (2017).
+    Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
+    \textbf{\textit{Chinese Journal of Population Resources and Environment}} \textit{16}(1): 1-11.
+    \DOI{10.1080/10042857.2017.1418273}. 
+    \textbf{[ESCI, IF=3.9, 4\heiti{区}, JCR Q2]}.
 \item
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江 (2016).
 	基于政府大数据的北京城市空间发展模式分析.
-    {\songtix{时空信息学报(地理信息世界)}} \textit{23}(3): 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST]
+    \textbf{\heiti{\textit{时空信息学报(地理信息世界)}}} 23(3): 20-26.
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}.  
+    \textbf{\heiti{[JST]}}
 %\end{etaremune}
 \end{enumerate}
 
 %\subsection*{Book Chapter}
 \subsection*{\texorpdfstring{\faBook\ 著作章节}{著作章节}}
 \begin{enumerate}
-%\begin{etaremune}
+\item
+    史源源, {\heiti{戴劭勍}}, 贾鹏 (2025).
+    医疗服务资源配置研究 \& 健康地理学的前沿视角和研究. 
+    \textbf{\textit{健康地理学}} \space 贾鹏\space 著, 北京: 高等教育出版社. 
+    IBSN: 978-7-04-063403-7. 
 \item
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren (2019).
-	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale.
-    \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
-%\end{etaremune}
+	Individual and interactive influences of anthropogenic and ecological factors on forest PM2.5 concentrations at an urban scale. 
+    In \textbf{\textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}}, 
+    edited by Shunlin Liang, Guangjian Yan, Jiancheng Shi, Remote Sensing, MDPI, 2019, 316-332. IBSN: 978-3-03897-276-1.
+    https://doi.org/10.3390/books978-3-03897-277-8. 
 \end{enumerate}
 
 \subsection*{\texorpdfstring{\faBook\ 专利}{专利}}
@@ -254,63 +337,17 @@
 \subsection*{\texorpdfstring{\faBook\ 开放数据 \& 代码}{开放数据 \& 代码}}
 \begin{enumerate}
 \item
+   %\Shaoqing, A. Stein, Y. Li, S. Yang, P. Jia (2024).
+   \Shaoqing, Alfred Stein, Yuchen Li, Shujuan Yang, Peng Jia. (2024).
+    Code and data to support 'Street view imagery for built environment auditing: a systematic review'  (Version 5). Zenodo. 
+    \DOI{10.5281/zenodo.10724305}.
+\item
    \Shaoqing. (2020).
     GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0). Zenodo. 
     \DOI{10.5281/zenodo.4277977}.
 \item
+   %\Shaoqing, S. Zuo, Y. Ren. (2020).
    \Shaoqing, Shudi Zuo, Yin Ren. (2020).
     GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.6 (Version 0.6) . Zenodo. 
     \DOI{10.5281/zenodo.3566072}.
-\end{enumerate}
-
-\subsection*{\texorpdfstring{\faBook\ 会议论文 \& 摘要}{会议论文 \& 摘要}}
-\begin{enumerate}
-\item
-    {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
-    春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
-    \textit{第十六次空间行为与规划研究会暨数字化与精细化治理学术研讨会, abstract}
-\item
-    Jiajia Li, Yupeng Liu, \Shaoqing, Keying Xiang, Huixian Jiang, Weiqiang Chen. (2019).
-    The night light uncovers city's weight—A case study on estimating construction materials in Fuzhou, China.
-    \textit{10th International Conference on Industrial Ecology, abstract 320}
-\item
-    {\heiti{戴劭勍}}. (2018).
-    地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战.
-    \textit{第十一届中国R语言会议, abstract}
-\item
-    \Shaoqing, Shudi Zuo, Yin Ren. (2018).
-    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
-    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
-\item
-    \Shaoqing\CF, Xiaoman Zheng, Shudi Zuo, Yin Ren. (2018).
-    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
-    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
-\item
-    Shudi Zuo, \Shaoqing, Yin Ren, Zhaowu Yu. (2017).
-    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
-    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
-\item
-    {\heiti{戴劭勍}}, 任引, 左舒翟, 代敏, 陈盼, 王朝, 徐凌星, 祁建伟, 云国梁. (2017).
-    城市形态的PM2.5环境效应——以京津冀城市群为例.
-    \textit{第九届中国景观生态学学术研讨会, abstract}.
-\item
-    叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2017).
-    不同环境规制工具对节能减排技术创新的影响——基于中国285个地级市的面板数据.
-    \textit{2017年中国地理学会经济地理专业委员会学术年会论文摘要集, abstract}.
-\item
-    {\heiti{戴劭勍}}, 任引, 左舒翟. (2017).
-    不同分辨率的城市碳排放空间分布与城市空间形态景观破碎化之间的关系.
-    \textit{第九届现代生态学讲座, abstract}.
-\item
-    {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 陈焜. (2016).
-    基于WalkScore与CGT模型的环境犯罪学分析：以H市为例.
-    \textit{第十二次空间行为与规划研究会暨时空间行为与城市社会规划研究学术研讨会, abstract}.
-\item
-     \Shaoqing, Huixian Jiang, Jiajia Li, Qingwei Xu. (2016).
-    Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District.
-    \textit{10th annual conference of International Association of China Planning, abstract 1813}.
-\item
-    \Shaoqing, Huixian Jiang, Jiajia Li. (2016).
-    The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
-    \textit{2016 International Low Impact Development Conference, paper 391}.
 \end{enumerate}
