--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -29,6 +29,8 @@
 \usepackage{fontspec}
 \usepackage{xunicode}
 \usepackage{xeCJK}
+\usepackage{setspace}
+\usepackage{enumitem}
 %\setmainfont{Minion Pro}
 %\setsansfont{Myriad Pro}
 %\setmonofont{Courier New}
@@ -55,6 +57,7 @@
 \newcommand{\mycvitemac}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\hfill\textbf{#3}}}
 \newcommand{\mycvitemacl}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\vfill\hfill\textbf{#3}}}
 \newcommand{\mycvitemEDU}[8]{\cvitem{\faCalendarO\hfill{#1}}{\textbf{#2}, \textit{#3}, {#4}\vfill{#5}\vfill{毕业论文题目:}\textit{#6}\vfill{专业:}{#7}\hfill\faMapMarker\ {#8}}}
+\newcommand{\mycvitemCOM}[5]{\cvitem{\faCalendarO\hfill{#1}}{\textbf{#2}, \textit{#3}, {#4}\vfill{#5}}}
 %\newcommand{\mycvitemPP}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\hfill\faMapMarker\ {#3}}}
 %\newcommand{\mycvitemPPl}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\vfill\hfill\faMapMarker\ {#3}}}
 \newcommand{\mycvitemPP}[2]{\cvitem{\faCalendarO\hfill{#1}}{{#2}}}
@@ -79,7 +82,7 @@
 % Name
 \name{戴}{劭勍}
 % Title
-\title{博士研究生}
+\title{博士后}
 
 \extrainfo{
 	% Date of birth
@@ -91,16 +94,17 @@
 	% Github
 	\faGithub\ \myuline{\href{https://github.com/GISerDaiShaoqing}{\nolinkurl{@Daishaoqing}}}\\
 	% Email
-	\faEnvelope\ \myuline{\href{mailto:dsq1993qingge@163.com}{\nolinkurl{dsq1993qingge@163.com}}}\\
+	\faEnvelope\ \myuline{\href{mailto:shaoqing.dai@outlook.com}{\nolinkurl{shaoqing.dai@outlook.com}}}\\
 	% Website
 	\faGlobe\ \myurl{http://gisersqdai.top/mycv/}\\
      	% Address
-     \faMap\ {荷兰恩斯赫德亨格洛大街99号, 7514 AE}\\
+     \faMap\ {湖北省武汉市珞喻路129号}\\
      %Affiliation
-     \faBuilding\ {荷兰特温特大学地理信息与对地观测学院对地观测科学系} 
+     \faBuilding\ {武汉大学资源与环境科学学院} 
 }
 % Picture
-\photo[42pt][2pt]{dsq.png}
+%\photo[42pt][2pt]{dsq.png}
+\photo[42pt][2pt]{shaoqingdai.png}
 % Quote
 %\quote{Urban, Ecology, GIS}
 \quote{\footnotesize Last updated: \today}
@@ -113,24 +117,26 @@
 	\makecvtitle
      %\input{experience}
 	%\vfill
+	 \input{employment}
      \input{education}
 	%\vfill
      \input{interests}
      \input{publications}
-     \input{software}
 	\nocite{*}
      	%\printbibliography[heading=none]
 	% \printbibliography[type=article,heading=subbibliography,title={Articles}]
 	% \printbibliography[type=inbook,heading=subbibliography,title={Chapters}]
 	%\vfill
      \input{awards}
-     \input{activities}
 	%\input{publications}
      \input{researches}
+     \input{software}
      \input{presentation}
      \input{poster}
+     \input{activities}
      %\input{language}
-     \input{skills}
+	 \input{teaching}
+     %\input{skills}
 	%\section{\texorpdfstring{\faLaptop\ Skills}{Skills}}
 		%\cvdoubleitem{Scripting}{Groovy, Bash, Python, Perl, Java, R}{Pipeline}{Nextflow}
 		%\cvdoubleitem{Containers}{Singularity, Docker, Bioconda}{Management}{Github, Trello, Slack}
