--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -15,4 +15,4 @@
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
-\mycvitemacl{自2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing \& Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience \& Remote Sensing, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
+\mycvitemacl{自2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing \& Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience \& Remote Sensing, Carbon Management, City and environment interactions, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划}{\songti{审稿人}}
