--- a/pagedown/template-zh.Rmd
+++ b/pagedown/template-zh.Rmd
@@ -521,7 +521,7 @@ N/A
 
 2013-2017
 
-### European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing & Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience & Remote Sensing, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划
+### European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing & Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience & Remote Sensing, Carbon Management, City and environment interactions, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, 上海城市规划
 
 审稿人
 
