--- a/enlatex/activities.tex
+++ b/enlatex/activities.tex
@@ -1,11 +1,11 @@
 \section{\texorpdfstring{\faGroup\ Academic Service \& Affiliations}{Academic Service \& Affiliations}}
 \mycvitemac{from 2024}{UrbanParty}{Lecturer}
 \mycvitemac{from 2024}{International Society for Photogrammetry and Remote Sensing Student Consortium}{Member}
-\mycvitemac{from 2024}{AI 4D City lab, Hong Kong University of Science and Technology (Guangzhou)}{Visiting Scholars}
+\mycvitemac{from 2024}{AI 4D City lab, Hong Kong University of Science and Technology (Guangzhou)}{Visiting Scholar}
 \mycvitemac{from 2019}{International Institute of Spatial Lifecourse Health (ISLE)}{Fellow}
 \mycvitemac{from 2019}{GeoDa Center, rgeoda, libgeoda Github Organizations}{Contributor}
 \mycvitemac{from 2015}{The Organizations "Sustainable Cities \& Mobility"}{Volunteer}
-\mycvitemac{2024}{2th World Congress of Geography, "Research on Global Health Wellbeing and Health Geography" session}{Convener}
+\mycvitemac{2024}{2nd World Congress of Geography, "Research on Global Health Wellbeing and Health Geography" session}{Convener}
 \mycvitemac{2024}{4th International Symposium on Spatial Lifecourse Health, "Application of System Simulation Models in Health Domain" session}{Convener}
 \mycvitemac{2024}{4th International Symposium on Spatial Lifecourse Health Workshop}{Lecturer}
 \mycvitemac{2024}{Heywhale Community and GISphere, 'Python x GIS' GeoAI Workshop}{Lecturer}
@@ -15,4 +15,4 @@
 \mycvitemac{2017-2019}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
 \mycvitemacl{2013-2017}{The Geographical Tribune of Youth}{Founder, Editor in Chief, Associate Editor, Assistant Editor in Chief}
-\mycvitemacl{from 2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing \& Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience \& Remote Sensing, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
+\mycvitemacl{from 2019}{European Heart Journal, Resources, Conservation and Recycling, Sustainable Cities and Society, International Journal of Geographical Information Science, Cities, Information Processing \& Management, Methods in Ecology and Evolution, International Journal of Digital Earth, GIScience \& Remote Sensing, Carbon Management, City and environment interactions, Frontiers in Public Health, Frontiers in Environmental Science, Frontiers in Earth Science, Scientific Reports, Data in Brief, The Journal of Open Source Software, Shanghai Urban Planning Review}{Reviewer}
