--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -184,7 +184,7 @@
     Yunfeng Tian, Shudi Zuo\CS, Jiaheng Ju, \Shaoqing, Yin Ren, Panfeng Dou (2024).
     Local carbon emission zone construction in the highly urbanized regions: application of residential and transport CO$_2$ emissions in Shanghai, China.
     \textbf{\textit{Building and Environment}} \textit{247}: 111007.
-    \DOI{10.1016/j.buildenv.2023.111007} 
+    \DOI{10.1016/j.buildenv.2023.111007}. 
     \textbf{[SCI, IF=7.1, 1\heiti{区}, JCR Q1]}.
 \item
     Pengxin Zhang\CF, Shuhan Yang\CF, \Shaoqing, Darren How Jin Aik, Shujuan Yang, Peng Jia\CS (2022).
