--- a/enlatex/interests.tex
+++ b/enlatex/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
 \section{\texorpdfstring{\faInfoCircle\ Research Interests}{Research Interests}}
-\cvitem{}{Health Geography; Urban Visual Intelligence; Spatial Lifecourse Helath; Spatial Statistics; Urban Computing; Spatial-Temporal Big Data}
+\cvitem{}{Health Geography; Urban Visual Intelligence; Spatial Lifecourse Helath; Spatial Statistics; GeoAI; Spatial-Temporal Big Data}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
