--- a/cnlatex/interests.tex
+++ b/cnlatex/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
 \section{\texorpdfstring{\faInfoCircle\ 研究领域}{研究领域}}
-\cvitem{}{健康地理;城市视觉智能;空间统计;城市计算;时空大数据;空间流行病学}
+\cvitem{}{健康地理;城市视觉智能;空间全生命周期健康;空间统计;地理人工智能;时空大数据}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
