--- a/pagedown/template-zh.Rmd
+++ b/pagedown/template-zh.Rmd
@@ -101,7 +101,7 @@ N/A
 
 研究兴趣 {data-icon=heart-o}
 --------------------------------------------------------------------------------
-健康地理; 城市视觉智能; 空间统计; 城市计算; 时空大数据; 空间流行病学
+健康地理; 城市视觉智能; 空间全生命周期健康; 空间统计; 地理人工智能; 时空大数据
 
 
 开发软件与项目 {data-icon=laptop}
