--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -166,7 +166,7 @@
 \item
     Changwei Cai\CF, Shuzhen Zhu\CF, Mingfang Qin\CF, Xiaoqing Li\CF, Chuanteng Feng, Bin Yu, \Shaoqing, Ge Qiu, Yuchen Li, Tingting Ye, Wenling Zhong, Ying Shao, Lan Zhang, Peng Jia\CS, Shujuan Yang\CS (2024).
     Long-term exposure to $PM_{2.5}$ chemical constituents and diabesity: evidence from a multi-center cohort study in China. 
-    \textbf{\textit{The Lancet Regional Health–Western Pacific}} \textit{16}(6): 1028.
+    \textbf{\textit{The Lancet Regional Health–Western Pacific}} \textit{47}: 101100.
     \DOI{10.1016/j.lanwpc.2024.101100}. \textbf{[SCI, IF=7.6, \heiti{1区-Lancet子刊}, JCR Q1]}.
 \item
     Weiwei Zhang, Zixi Liu, Kun Qin, \Shaoqing, Huiyuan Lu, Miao Lu, Jianwan Ji, Zhaohui Yang, Chao Chen, Peng Jia\CS (2024).
