--- a/pagedown/template-zh.Rmd
+++ b/pagedown/template-zh.Rmd
@@ -564,7 +564,7 @@ Manyao Li#, **Shaoqing Dai#**, Yuanyuan Shi#, Kun Qin#, Ross Brownson, Yan Keste
 
 ### Long-term exposure to PM2.5 chemical constituents and diabesity: evidence from a multi-center cohort study in China
 
-The Lancet Regional Health–Western Pacific 16(6): 1028.doi:10.1016/j.lanwpc.2024.101100 [SCI, IF=7.6]
+The Lancet Regional Health–Western Pacific 47: 101100. doi:10.1016/j.lanwpc.2024.101100 [SCI, IF=7.6]
 
 N/A
 
